--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img id="popcet-1" src="1.svg" alt="Popcet">
         <img id="popcet-2" src="1.svg" alt="Popcet" style="display:hidden;">
 
-        <audio id="popsound" src="PC.wav"></audio>
+        <audio id="popsound" src="PC.webm"></audio>
 
         <script>
             var cnt = 0;
