--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8">
         <title>Popcet</title>
         <style>
+            body{
+              overflow: hidden;
+            }
             img{
                 width: 50px;
                 display: block;
