--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             window.addEventListener("click", () => release());
             window.addEventListener("keyup", () => release());
 
-            window.addEventListener("mousedown", () => hold();
+            window.addEventListener("mousedown", () => hold());
             window.addEventListener("keydown", () => hold());
         </script>
     </body>
